WIP: Updating for documentation
